# praxis1_rn

./: .gitignore  CMakeLists.txt  Pipfile  README.md  praxis1.md
includes/: al_socket.h  http_utils.h  request_handler.h  resource_manager.h
src/: al_socket.c  http_utils.c  request_handler.c  resource_manager.c  webserver.c
test/: test_praxis1.py
